tests/cases/compiler-development/artifact/errors/diagnostic-generic-aggregate-use-after-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved owned field 'value.value'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" display="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" bytes=264
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" line=12 column=22 end_line=12 end_column=27 byte_start=214 byte_end=219 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-aggregate-use-after-move.ari:12:22\n    |\n 12 |   let second = value.value;\n    |                      ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/generics/errors/generic-aggregate-use-after-move.ari" line=10 column=7 end_line=10 end_column=12 byte_start=114 byte_end=119 message="owning aggregate binding 'value' declared here"
  Snippet label=1 text="  --> tests/cases/generics/errors/generic-aggregate-use-after-move.ari:10:7\n    |\n 10 |   let value: Box[own i64] = Box { value: make_owned(1) };\n    |       ^^^^^"
  Note index=0 location=none message="owned aggregate fields are tracked independently after field moves, drops, and pattern destructuring"
  Help index=0 location=none message="use the value produced by the earlier move, or avoid moving 'value.value' before this use"
